versions/26.1.2/translated/it_it/develop/commands/basics.md
---
title: Creare Comandi
description: Creare comandi con parametri e azioni complesse.
authors:
  - Atakku
  - dicedpixels
  - haykam821
  - i509VCB
  - Juuxel
  - MildestToucan
  - modmuss50
  - mschae23
  - natanfudge
  - Pyrofab
  - SolidBlock-cn
  - Technici4n
  - Treeways
  - xpple
resources:
  https://github.com/Mojang/brigadier: Codice sorgente di Brigadier
---

Creare comandi può permettere a uno sviluppatore di mod di aggiungere funzionalità che possono essere usate attraverso un comando. Questo tutorial ti insegnerà come registrare comandi e qual è la struttura generale dei comandi di Brigadier.

::: info

[Brigadier](https://github.com/Mojang/brigadier) è un parser e un dispatcher di comandi open-source, scritto da Mojang per Minecraft. È una libreria comandi basata su una gerarchia dove costruisci un albero di comandi e parametri.

:::

## L'interface `Command` {#the-command-interface}

`com.mojang.brigadier.Command` è un'interfaccia funzionale, che esegue del codice specifico, e lancia una `CommandSyntaxException` in determinati casi. Ha un tipo generico `S`, che definisce il tipo della _sorgente del comando_.
La sorgente del comando fornisce del contesto in cui un comando è stato eseguito. In Minecraft, la sorgente del comando è tipicamente una `CommandSourceStack` che potrebbe rappresentare un server, un blocco comandi, una connessione remota (RCON), un giocatore o un'entità.

L'unico metodo di `Command`, `run(CommandContext<S>)` accetta un `CommandContext<S>` come unico parametro e restituisce un intero. Il contesto del comando contiene la tua sorgente del comando di `S` e ti permette di ottenere parametri, osservare i nodi di un comando di cui è stato effettuato il parsing e vedere l'input usato in questo comando.

Come altre interfacce funzionali, viene solitamente usata come una lambda o come un riferimento a un metodo:

```java
Command<CommandSourceStack> command = context -> {
    return 0;
};
```

L'intero può essere considerato il risultato del comando. Di solito valori minori o uguali a zero indicano che un comando è fallito e non farà nulla. Valori positivi indicano che il comando ha avuto successo e ha fatto qualcosa. Brigadier fornisce una costante per indicare
il successo; `Command#SINGLE_SUCCESS`.

### Cosa Può Fare la `CommandSourceStack`? {#what-can-the-servercommandsource-do}

Una `CommandSourceStack` fornisce del contesto aggiuntivo dipendente dall'implementazione quando un comando viene eseguito. Questo include la possibilità di ottenere l'entità che ha eseguito il comando, il mondo in cui esso è stato eseguito o il server su cui è stato eseguito.

Puoi accedere alla sorgente del comando dal contesto del comando chiamando `getSource()` sull'istanza di `CommandContext`.

```java
Command<CommandSourceStack> command = context -> {
    CommandSourceStack source = context.getSource();
    return 0;
};
```

## Registrare un Comando Basilare {#registering-a-basic-command}

I comandi sono registrati all'interno del `CommandRegistrationCallback` fornito dall'API di Fabric.

::: info

Per informazioni su come registrare i callback, vedi per favore la guida [Eventi](../events).

:::

L'evento dovrebbe essere registrato nell'[initializer della tua mod](../getting-started/project-structure#entrypoints).

Il callback ha tre parametri:

- `CommandDispatcher<CommandSourceStack> dispatcher` - Usato per registrare, analizzare, ed eseguire comandi. `S` è il tipo di fonte di comando che il dispatcher supporta.
- `CommandBuildContext registryAccess` - Fornisce un'astrazione alle registry che potrebbero essere passate ad alcuni argomenti di metodi di comandi
- `Commands.CommandSelection environment` - Identifica il tipo di server su cui i comandi vengono registrati.

Nell'initializer della mod, registriamo un semplice comando:

<<< @/reference/26.1.2/src/main/java/com/example/docs/command/ExampleModCommands.java#test_command

Nel metodo `sendSuccess()` il primo parametro è il testo che viene mandato, che è un `Supplier<Component>` per evitare d'istanziare oggetti `Component` quando non è necessario.

Il secondo parametro determina se trasmettere il feedback agli altri moderatori. In generale, se il comando deve ottenere informazioni senza effettivamente modificare il mondo, come il tempo corrente o una statistica di un giocatore, dovrebbe essere `false`. Se il comando fa qualcosa, come cambiare il tempo o modificare il punteggio di qualcuno, dovrebbe essere `true`.

Se il comando fallisce, anziché chiamare `sendSuccess()`, puoi direttamente lanciare qualsiasi eccezione e il server o il client la gestiranno in modo appropriato.

`CommandSyntaxException` generalmente viene lanciata per indicare errori di sintassi nel comando o negli argomenti. Puoi anche implementare la tua eccezione personalizzata.

Per eseguire questo comando, devi scrivere `/test_command`, tutto minuscolo.

::: info

Da ora in poi, estrarremo la logica scritta all'interno della lambda passata nei costruttori `.executes()` in metodi individuali. Potremo quindi passare a `.executes()` un riferimento al metodo. Faremo questo per chiarezza.

:::

### Ambiente di Registrazione {#registration-environment}

Se vuoi, puoi anche assicurarti che un comando venga registrato solo sotto circostanze specifiche, per esempio, solo nell'ambiente dedicato:

<<< @/reference/26.1.2/src/main/java/com/example/docs/command/ExampleModCommands.java#dedicated_command{2}

<<< @/reference/26.1.2/src/main/java/com/example/docs/command/ExampleModCommands.java#execute_dedicated_command

### Requisiti dei Comandi {#command-requirements}

Immagina di avere un comando e vuoi che solo i moderatori lo possano eseguire. Questo è dove il metodo `requires()` entra in gioco. Il metodo `requires()` ha un solo argomento `Predicate<S>` che fornirà una `CommandSourceStack` con cui testare e determinare se la `CommandSource` può eseguire il comando.

<<< @/reference/26.1.2/src/main/java/com/example/docs/command/ExampleModCommands.java#required_command{3}

<<< @/reference/26.1.2/src/main/java/com/example/docs/command/ExampleModCommands.java#execute_required_command

Questo comando verrà eseguito solo se la fonte del comando è almeno un moderatore, inclusi i blocchi comandi. Altrimenti, il comando non è registrato.

Questo ha l'effetto collaterale di non mostrare il comando se si completa con <kbd>Tab</kbd> a nessuno eccetto moderatori. Inoltre è il motivo per cui non puoi completare molti dei comandi con <kbd>Tab</kbd> a meno di abilitare i comandi.

### Sotto Comandi {#sub-commands}

Per aggiungere un sotto comando, devi registrare il primo nodo letterale del comando normalmente. Per avere un sotto comando, devi aggiungere il nodo letterale successivo al nodo esistente.

<<< @/reference/26.1.2/src/main/java/com/example/docs/command/ExampleModCommands.java#sub_command_one{3}

<<< @/reference/26.1.2/src/main/java/com/example/docs/command/ExampleModCommands.java#execute_sub_command_one

Similarmente agli argomenti, i nodi dei sotto comandi possono anch'essi essere opzionali. Nel caso seguente, sia `/command_two` che `/command_two sub_command_two` saranno validi.

<<< @/reference/26.1.2/src/main/java/com/example/docs/command/ExampleModCommands.java#sub_command_two{2,8}

<<< @/reference/26.1.2/src/main/java/com/example/docs/command/ExampleModCommands.java#execute_command_sub_command_two

## Comandi Lato Client {#client-commands}

Allo stesso modo, l'API di Fabric fornisce l'evento `ClientCommandRegistrationCallback` nel package `net.fabricmc.fabric.api.client.command.v2`, che può essere usato per registrare comandi lato client. Esso sostituisce la classe vanilla `Commands` con l'equivalente `ClientCommands`. Il codice dovrebbe esistere solo nel codice lato client.

<<< @/reference/26.1.2/src/client/java/com/example/docs/client/command/ExampleModClientCommands.java#register_command

## Reindirizzare Comandi {#command-redirects}

I comandi reindirizzati - anche noti come alias - sono un modo di reindirizzare la funzionalità di un comando a un altro. Questo è utile quando vuoi cambiare il nome di un comando, ma vuoi comunque supportare il vecchio nome.

::: warning

Brigadier [reinderizzerà soltanto i nodi di comandi contenenti parametri](https://github.com/Mojang/brigadier/issues/46). Se volessi reinderizzare il nodo di un comando senza parametri, fornisci un costruttore `.executes()` con un riferimento alla stessa logica presentata nell'esempio.

:::

<<< @/reference/26.1.2/src/main/java/com/example/docs/command/ExampleModCommands.java#redirect_command

<<< @/reference/26.1.2/src/main/java/com/example/docs/command/ExampleModCommands.java#execute_redirected_by

## Domande Frequenti (FAQ) {#faq}

### Perché il Mio Codice Non Viene Compilato? {#why-does-my-code-not-compile}

- Catturare o lanciare una `CommandSyntaxException` - `CommandSyntaxException` non è una `RuntimeException`. Se la lanci, dovresti farlo in metodi che lanciano una `CommandSyntaxException` nelle firme dei metodi, oppure dovresti catturarla.
  Brigadier gestirà le eccezioni controllate e ti inoltrerà il messaggio d'errore effettivo nel gioco.

- Problemi con i generic - Potresti avere un problema con i generic una volta ogni tanto. Se stai registrando comandi sul server (ovvero nella maggior parte dei casi), assicurati di star usando `Commands.literal`
  o `Commands.argument` anziché `LiteralArgumentBuilder.literal` o `RequiredArgumentBuilder.argument`.

- Controlla il metodo `sendSuccess()` - Potresti aver dimenticato di fornire un valore booleano come secondo argomento. Ricordati anche che, da Minecraft 1.20, il primo parametro è `Supplier<Component>` anziché `Component`.

- Un Command dovrebbe restituire un intero - Quando registri comandi, il metodo `executes()` accetta un oggetto `Command`, che è solitamente una lambda. La lambda dovrebbe restituire un intero, anziché altri tipi.

### Posso Registrare Comandi al Runtime? {#can-i-register-commands-at-runtime}

::: warning

Questo si può fare, ma non è consigliato. Bisognerebbe ottenere l'oggetto `Commands` dal server e aggiungere i comandi che vuoi al suo `CommandDispatcher`.

Dopo averlo fatto, devi nuovamente inviare l'albero di comandi a ogni giocatore usando `Commands.sendCommands(ServerPlayer)`.

Questo è necessario perché il client mantiene una cache locale dell'albero dei comandi che riceve durante il login (o quando vengono mandati pacchetti per moderatori) per suggerimenti locali e messaggi di errore ricchi.

:::

### Posso De-Registrare Comandi al Runtime? {#can-i-unregister-commands-at-runtime}

::: warning

Anche questo si può fare, tuttavia è ancora meno stabile della registrazione di comandi al runtime e potrebbe causare effetti collaterali non desiderati.

Per tenere le cose semplici, devi usare la reflection su Brigadier e rimuovere nodi. Dopodiché, devi mandare nuovamente l'albero di comandi a ogni giocatore usando `sendCommands(ServerPlayer)`.

Se non mandi l'albero di comandi aggiornato, il client potrebbe credere che il comando esista ancora, anche se fallirà l'esecuzione sul server.

:::

<!---->
